--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Mac
+.DS_Store
+assets/.DS_Store
+
 # Logs
 logs
 *.log
@@ -80,7 +84,6 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
